[gd_scene format=3 uid="uid://3e8qae1gdavb"]

[ext_resource type="Script" uid="uid://d3jubf108lc6m" path="res://addons/spatial_remarks/sr_creation.gd" id="1_alq4y"]
[ext_resource type="Texture2D" uid="uid://dqygkkvnr37fw" path="res://addons/spatial_remarks/assets/circle_1x1.svg" id="2_qhx4l"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_hwwwn"]
blend_mode = 1
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_bes23"]
blend_mode = 2
light_mode = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hwwwn"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.028662786, 0.15198252, 0.047491834, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bes23"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.264422, 0.00018688418, 1.2032688e-08, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="SpatialRemarkCreation" type="CanvasLayer" unique_id=1762695129 node_paths=PackedStringArray("_position_label", "_position_value_label", "_target_object_label", "_target_object_option_button", "_target_object_value_label", "_scene_label", "_scene_value_label", "_author_line_edit", "_author_value_label", "_creation_time_value_label", "_remark_text_edit", "_background_rect", "_canvas_group", "_background_mask")]
layer = 100
script = ExtResource("1_alq4y")
_position_label = NodePath("VBoxContainer/HBoxContainer/GridContainer/PositionLabel")
_position_value_label = NodePath("VBoxContainer/HBoxContainer/GridContainer/PositionValueLabel")
_target_object_label = NodePath("VBoxContainer/HBoxContainer/GridContainer/TargetObjectLabel")
_target_object_option_button = NodePath("VBoxContainer/HBoxContainer/GridContainer/TargetObjectOptionButton")
_target_object_value_label = NodePath("VBoxContainer/HBoxContainer/GridContainer/TargetObjectValueLabel")
_scene_label = NodePath("VBoxContainer/HBoxContainer/GridContainer/SceneLabel")
_scene_value_label = NodePath("VBoxContainer/HBoxContainer/GridContainer/SceneValueLabel")
_author_line_edit = NodePath("VBoxContainer/HBoxContainer/GridContainer/AuthorLineEdit")
_author_value_label = NodePath("VBoxContainer/HBoxContainer/GridContainer/AuthorValueLabel")
_creation_time_value_label = NodePath("VBoxContainer/HBoxContainer/GridContainer/CreationTimeValueLabel")
_remark_text_edit = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/RemarkTextEdit")
_background_rect = NodePath("CanvasGroup/BackgroundRect")
_canvas_group = NodePath("CanvasGroup")
_background_mask = NodePath("CanvasGroup/BackgroundMask")

[node name="CanvasGroup" type="CanvasGroup" parent="." unique_id=214293134]
position = Vector2(580, 320)

[node name="BackgroundRect" type="ColorRect" parent="CanvasGroup" unique_id=1631833651]
material = SubResource("CanvasItemMaterial_hwwwn")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -363.0
offset_right = 640.0
offset_bottom = 357.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0.5)
color = Color(0, 0, 0, 0.36078432)

[node name="BackgroundMask" type="TextureRect" parent="CanvasGroup" unique_id=278092328]
material = SubResource("CanvasItemMaterial_bes23")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.5
offset_top = -113.5
offset_right = 113.5
offset_bottom = 113.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0.5)
texture = ExtResource("2_qhx4l")
expand_mode = 1
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=284885850]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -409.0
offset_top = -149.5
offset_right = 409.0
offset_bottom = 149.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer" unique_id=1518447054]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "New Spatial Remark"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" unique_id=1843244742]
layout_mode = 2
theme_override_constants/separation = 220
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer" unique_id=1777771859]
layout_mode = 2

[node name="RemarkTextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer" unique_id=1033556857]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
placeholder_text = "Remark..."

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer" unique_id=21555968]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 9
columns = 2

[node name="PositionLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/GridContainer" unique_id=830665348]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/default_color = Color(0.85, 0.85, 0.85, 1)
bbcode_enabled = true
text = "[i]Position:[/i]"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 2
vertical_alignment = 1

[node name="PositionValueLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/GridContainer" unique_id=395348850]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
bbcode_enabled = true
text = "(0,0,0)"
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="TargetObjectLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/GridContainer" unique_id=1702127808]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/default_color = Color(0.85, 0.85, 0.85, 1)
bbcode_enabled = true
text = "[i]TargetObject:[/i]"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 2
vertical_alignment = 1

[node name="TargetObjectOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer/GridContainer" unique_id=1736910535]
layout_mode = 2

[node name="TargetObjectValueLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/GridContainer" unique_id=1071455740]
visible = false
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
bbcode_enabled = true
text = "ExampleTargetObject"
fit_content = true
scroll_active = false
vertical_alignment = 1

[node name="SceneLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/GridContainer" unique_id=2081434399]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_colors/default_color = Color(0.85, 0.85, 0.85, 1)
bbcode_enabled = true
text = "[i]Scene:[/i]"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 2
vertical_alignment = 1

[node name="SceneValueLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/GridContainer" unique_id=1702069569]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
bbcode_enabled = true
text = "ExampleScene"
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="AuthorLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/GridContainer" unique_id=1712200562]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/default_color = Color(0.85, 0.85, 0.85, 1)
bbcode_enabled = true
text = "[i]Author:[/i]"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 2
vertical_alignment = 1

[node name="AuthorValueLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/GridContainer" unique_id=1751828421]
visible = false
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
bbcode_enabled = true
text = "ExampleAuthor"
fit_content = true
scroll_active = false
vertical_alignment = 1

[node name="AuthorLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer/GridContainer" unique_id=772962549]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "ExampleAuthor"
editable = false

[node name="CreationTimeLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/GridContainer" unique_id=1801741881]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/default_color = Color(0.85, 0.85, 0.85, 1)
bbcode_enabled = true
text = "[i]CreationTime:[/i]"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 2
vertical_alignment = 1

[node name="CreationTimeValueLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/GridContainer" unique_id=134513288]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
bbcode_enabled = true
text = "ExampleTime"
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="ButtonHBC" type="HBoxContainer" parent="VBoxContainer" unique_id=1962006817]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Create" type="Button" parent="VBoxContainer/ButtonHBC" unique_id=517841926]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_hwwwn")
text = "Create"

[node name="Cancel" type="Button" parent="VBoxContainer/ButtonHBC" unique_id=1533085062]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_bes23")
text = "Cancel"

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/GridContainer/TargetObjectOptionButton" to="." method="_on_target_object_option_button_item_selected"]
[connection signal="pressed" from="VBoxContainer/ButtonHBC/Create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonHBC/Cancel" to="." method="_on_cancel_pressed"]
